--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,6 +1,6 @@
 user = root
 password = 
-jdbcUrl = jdbc\:mysql\://localhost/test1?useUnicode\=true&characterEncoding\=utf8
+jdbcUrl = jdbc\:mysql\://localhost/test?useUnicode\=true&characterEncoding\=utf8
 driverClass =com.mysql.jdbc.Driver
 
 #user = sa
